--- a/backend/PayMilli/Dockerfile
+++ b/backend/PayMilli/Dockerfile
@@ -1,1 +1,14 @@
-D
+# Base image: OpenJDK 17
+FROM openjdk:17
+
+# Set working directory inside the container
+WORKDIR /app
+
+# Copy the compiled JAR file into the container at /app
+COPY build/libs/paymilli-0.0.1-SNAPSHOT.jar /app/app.jar
+
+# Expose port 8080 to the outside world
+EXPOSE 8080
+
+# Command to run the Spring Boot application when the container starts
+ENTRYPOINT ["java", "-jar", "app.jar"]
