chore: application.yaml 수정
- prod로 변경
- context-path에 paymilli 추가

--- a/backend/PayMilli/src/main/resources/application-dev.yaml
+++ b/backend/PayMilli/src/main/resources/application-dev.yaml
@@ -1,6 +1,6 @@
 server:
   servlet:
-    context-path: /api/v1
+    context-path: /api/v1/paymilli
 
 spring:
   config:
@@ -16,7 +16,6 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-        #        dialect: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
         globally_quoted_identifiers: true
         format_sql: true
         show_sql: true
