--- a/backend/PayMilli/src/main/resources/application-dev.yaml
+++ b/backend/PayMilli/src/main/resources/application-dev.yaml
@@ -22,6 +22,10 @@ spring:
     hibernate:
       ddl-auto: update
     open-in-view: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 
 jwt:
