--- a/backend/PayMilli/src/main/resources/application-prod.yaml
+++ b/backend/PayMilli/src/main/resources/application-prod.yaml
@@ -22,6 +22,10 @@ spring:
     hibernate:
       ddl-auto: update
     open-in-view: true
+  data:
+    redis:
+      host: ${redis.host}
+      port: ${redis.port}
 
 jwt:
   header: Authorization
