--- a/backend/CardCompany/build.gradle
+++ b/backend/CardCompany/build.gradle
@@ -24,19 +24,22 @@ repositories {
 }
 
 dependencies {
-
+    implementation group: 'com.github.f4b6a3', name: 'ulid-creator', version: '5.1.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-//    runtimeOnly 'com.mysql:mysql-connector-j'
+    runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //    testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    //S3
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     //webClient
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
-
+    
 }
 
 tasks.named('test') {
