--- a/backend/CardCompany/src/main/resources/application.yaml
+++ b/backend/CardCompany/src/main/resources/application.yaml
@@ -1,3 +1,31 @@
 spring:
   application:
     name: CardCompany
+
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/cardServer?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: ${USER_NAME}
+    password: ${USER_PASSWORD}
+
+  jpa:
+    open-in-view: true
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
+      dialect: org.hibernate.dialect.MySQL8InnoDBDialect
+
+cloud:
+  aws:
+    s3:
+      bucket: <버킷 이름>
+    stack.auto: false
+    region.static: ap-northeast-2
+    credentials:
+      accessKey: <발급 받은 accessKey>
+      secretKey: <발급 받은 secretKey>
+
+ssafy:
+  apiKey:${API_KEY}
