--- a/backend/CardCompany/src/main/resources/application-prod.yaml
+++ b/backend/CardCompany/src/main/resources/application-prod.yaml
@@ -1,25 +1,30 @@
 server:
   servlet:
-    context-path: /api/v1/cardcompany
+    context-path: /api/v1/cardCompany
 
 spring:
   config:
     import: optional:file:.env[.properties]
+
   application:
     name: CardCompany
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://${db.host}:${db.port}/${db.database}?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
     username: ${db.username}
     password: ${db.password}
+
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-        #        dialect: org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
-        globally_quoted_identifiers: true
-        format_sql: true
-        show_sql: true
-    hibernate:
-      ddl-auto: update
     open-in-view: true
+    hibernate:
+      ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate.format_sql: true
+      dialect: org.hibernate.dialect.MySQL8InnoDBDialect
+
+ssafy:
+  apiKey:${api.key}
+
+
