--- a/backend/PayMilli/build.gradle
+++ b/backend/PayMilli/build.gradle
@@ -24,6 +24,8 @@ repositories {
 }
 
 dependencies {
+
+    implementation group: 'com.github.f4b6a3', name: 'ulid-creator', version: '5.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
