--- a/backend/CardCompany/src/main/resources/application-prod.yaml
+++ b/backend/CardCompany/src/main/resources/application-prod.yaml
@@ -23,7 +23,7 @@ spring:
         format_sql: true
         show_sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     open-in-view: true
 
 
