--- a/backend/PayMilli/build.gradle
+++ b/backend/PayMilli/build.gradle
@@ -42,7 +42,7 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
-
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.5.2'
 
     //webClient
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
